Fixed contexts.py to show total of games on sale. Fixed minor layout issues

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -190,12 +190,20 @@ footer {
     min-height: 46px;
 }
 
-.panel-price {
+/* .panel-price {
     margin-top: 0;
     margin-bottom: 0;
     font-weight: 500;
     font-size: 1.2rem;
     float: right;
+} */
+
+.panel-price {
+    color: #443f3f;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 0;
+    line-height: 20px;
 }
 
 .panel-input {
@@ -242,7 +250,6 @@ strike{
     color: grey;
     font-size: .7rem;
     float: right;
-    margin-bottom: 0;
 }
 
 .game-title {
@@ -294,11 +301,16 @@ strike{
 .cart-total {
     padding: 10px;
     float: right;
-}
+} 
 
 .fa-check-circle {
     font-size: 24px;
     border-radius: 50%;
+}
+
+.total {
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 
